Kubernetes/overlays/ou/rap/production/rap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rap
spec:
  template:
    spec:
      containers:
        - name: ampersand-rap
