Kubernetes/overlays/ou/rap/production/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
spec:
  tls:
    - hosts:
        - cs.ou.nl
  rules:
    - host: cs.ou.nl
